Fix bug: logo stuck at center of screen in home section

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -93,7 +93,8 @@ ul#menu {
 }
 
 .logo {
-  margin-top: 50px;
+  position: absolute;
+  top: 50px;
 }
 
 .slogan {
